--- a/assets/webconfig/css/hyperion.css
+++ b/assets/webconfig/css/hyperion.css
@@ -77,6 +77,7 @@ table.input-group{width:100%}
 table.borderless td,table.borderless th{border: none !important;}
 .borderless {margin-bottom:0px;}
 table label{margin:0;}
+table.first_cell_borderless td:first-child,table.first_cell_borderless th:first-child{border: none !important;}
 
 /*Header*/
 .navbar-brand{padding-top:4px;padding-bottom:0px;padding-left:2px;}
@@ -105,6 +106,11 @@ table label{margin:0;}
 	border-left:10px solid #0E83E7;
 }
 
+.itbody td:not(:first-child){
+	width: 1px;
+	text-align: center;
+}
+
 /*Panels*/
 .panel-heading{font-size:18px;}
 .headcollapse{cursor:pointer;}
@@ -114,15 +120,22 @@ table label{margin:0;}
 	border-color:#d0d0d0 !important;
 }
 .panel-default>.panel-heading{
-	background-color:#f3f3f3 !important;
+	background-color:#0E83E7 !important;
 	border-color:#ddd !important;
+	color: #fff ;
+}
+
+.panel-default>.panel-instance{
+	background-color:#E18300 !important;
+	border-color:#ddd !important;
+	color: #fff ;
 }
 
 /*remote page*/
 @media (max-width: 500px) {.ssthead th:nth-child(1), .sstbody td:nth-child(1){display:none}}
 
 /*Dashboard*/
-.component-on{color:green;}
+.component-on{color:#67FF01;}
 .component-off{color:grey;}
 #dash_news hr{margin:10px 0}
 
@@ -327,7 +340,7 @@ li a:active:after {
     color: #428bca;
 }
 .bs-callout-success {
-    border-left-color: #5cb85c;
+    border-left-color: #67FF01;
 }
 .bs-callout-success h4 {
     color: #5cb85c;
