Add Cololight schema

--- a/libsrc/leddevice/LedDeviceSchemas.qrc
+++ b/libsrc/leddevice/LedDeviceSchemas.qrc
@@ -36,5 +36,6 @@
 		<file alias="schema-nanoleaf">schemas/schema-nanoleaf.json</file>
 		<file alias="schema-wled">schemas/schema-wled.json</file>
 		<file alias="schema-yeelight">schemas/schema-yeelight.json</file>
+		<file alias="schema-cololight">schemas/schema-cololight.json</file>
 	</qresource>
 </RCC>
